Fix spacing and styling for lesson show and contribution form

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -208,7 +208,7 @@ h3 {
   padding: 12px; /* Add some padding */
   text-decoration: none; /* Remove default text underline */
   font-size: 18px; /* Increase the font-size */
-  color: black; /* Add a black text color */
+  color: rgb(61, 146, 201);
   display: block; /* Make it into a block element to fill the whole list */
 }
 
